# lambda_simple_binary_execute

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust-test-aarch64.yml  rust-test-x86_64.yml
src/: hello_world_test.rs  lib.rs  main.rs
tests/: hello_world_test.rs  libtest.rs
