[package]
name = "lambda_simple_binary_execute"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread","macros"] }
reqwest = { version = "0.12.8", features = ["json","rustls-tls","gzip"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[bin]]
name = "hello_world_test"
path = "src/hello_world_test.rs"